# slobank-mqtt-publisher

./: Cargo.toml
src/: main.rs
