[package]
name = "slobank-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
paho-mqtt = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
rumqttc = "0.24.0"
clap = "4.5.26"

[dependencies.libftd2xx]
version = "0.33.1"
# statically link the vendor library, defaults to dynamic if not set
# this will make things "just work" on Linux and Windows
features = ["static"]